--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
     "@angular/compiler": "https://esm.sh/@angular/compiler@^21.1.3?external=rxjs",
     "@angular/platform-browser": "https://esm.sh/@angular/platform-browser@^21.1.3?external=rxjs",
     "@angular/core": "https://esm.sh/@angular/core@^21.1.3?external=rxjs",
-    "@angular/common": "https://esm.sh/@angular/common@^21.1.3?external=rxjs"
+    "@angular/common": "https://esm.sh/@angular/common@^21.1.3?external=rxjs",
+    "@angular/forms": "https://esm.sh/@angular/forms@^21.1.3?external=rxjs"
   }
 }
 </script>
 </head>
-<body class="bg-slate-950 text-slate-300 antialiased selection:bg-cyan-500 selection:text-white">
+<body class="text-slate-300 antialiased selection:bg-cyan-500 selection:text-white">
   <app-root></app-root>
 </body>
 </html>
